--- a/GameShardsCore3/GameShardsCore3.csproj
+++ b/GameShardsCore3/GameShardsCore3.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,11 +29,13 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,40 +44,99 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Root\AI\Pathfind\Dijkstra\Common\Class1.cs" />
+    <Compile Include="AI\Pathfind\Dijkstra\Common\GraphEventArgs.cs" />
+    <Compile Include="AI\Pathfind\Dijkstra\InterfaceModel\IEdge.cs" />
+    <Compile Include="AI\Pathfind\Dijkstra\InterfaceModel\INode.cs" />
+    <Compile Include="AI\Pathfind\Dijkstra\Main\DijkstraAlgorithm.cs" />
+    <Compile Include="AI\Pathfind\Dijkstra\Model\Edge.cs" />
+    <Compile Include="AI\Pathfind\Dijkstra\Model\Node.cs" />
+    <Compile Include="Attributes\DevelopedByAttribute.cs" />
+    <Compile Include="Attributes\MaintainedByAttribute.cs" />
+    <Compile Include="Attributes\TestedAttribute.cs" />
+    <Compile Include="Attributes\ToDoAttribute.cs" />
+    <Compile Include="Attributes\ToTestAttribute.cs" />
+    <Compile Include="Attributes\WIPAttribute.cs" />
+    <Compile Include="Colors\HEXColor.cs" />
+    <Compile Include="Core\LibLanguage\LibLanguageManager.cs" />
+    <Compile Include="Date\Utils.cs" />
+    <Compile Include="Exceptions\DeckEmptyException.cs" />
+    <Compile Include="ExtensionMethods\Arrays\ArrayExtended.cs" />
+    <Compile Include="Gameworks\Cards\Card.cs" />
+    <Compile Include="Gameworks\Cards\ICard.cs" />
+    <Compile Include="Gameworks\Cards\ICardCategory.cs" />
+    <Compile Include="Gameworks\Cards\Deck.cs" />
+    <Compile Include="Gameworks\Cards\FrenchCards\FrenchCard.cs" />
+    <Compile Include="Gameworks\Cards\FrenchCards\FrenchCategory.cs" />
+    <Compile Include="Gameworks\Cards\FrenchCards\FrenchSeed.cs" />
+    <Compile Include="Gameworks\Cards\FrenchCards\FrenchValue.cs" />
+    <Compile Include="Gameworks\Cards\ISeed.cs" />
+    <Compile Include="Mathematics\BaseConverter\BaseConverter.cs" />
+    <Compile Include="Mathematics\BaseConverter\RomanSymbol.cs" />
+    <Compile Include="Mathematics\Constants.cs" />
+    <Compile Include="Mathematics\Numbers\NumberManipulator.cs" />
+    <Compile Include="Mathematics\Operators\Operators.cs" />
+    <Compile Include="Mathematics\Random\TrueRNG.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AI\Pathfind\Dijkstra\Model\Graph.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ResourceManager\LanguageManager\Language.cs" />
+    <Compile Include="ResourceManager\LanguageManager\LanguageManager.cs" />
+    <Compile Include="ResourceManager\ResourceEntry.cs" />
+    <Compile Include="ResourceManager\ResourceManager.cs" />
+    <Compile Include="ResourceManager\ResourceRegistry.cs" />
+    <Compile Include="Resources\Languages\IT_it.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IT_it.resx</DependentUpon>
+    </Compile>
+    <Compile Include="StringManipulation\Alphabet\Alphabet.cs" />
+    <Compile Include="StringManipulation\Alphabet\CharAlphabet.cs" />
+    <Compile Include="StringManipulation\Alphabet\StringAlphabet.cs" />
+    <Compile Include="StringManipulation\StringManipulator.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
+      <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Languages\IT_it.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>IT_it.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\BronzeTrophy.png" />
+    <None Include="Resources\Languages\EN_us.lang" />
+    <None Include="Resources\Languages\IT_it.lang" />
+    <None Include="Resources\Sprites\BronzeTrophy.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\CopperTrophy.png" />
+    <None Include="Resources\Sprites\CopperTrophy.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\GoldTrophy.png" />
+    <None Include="Resources\Sprites\GoldTrophy.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\PlatinumTrophy.png" />
+    <None Include="Resources\Sprites\PlatinumTrophy.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\SilverTrophy.png" />
+    <None Include="Resources\Sprites\SilverTrophy.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\UraniumTrophy.png" />
+    <None Include="Resources\Sprites\UraniumTrophy.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\ChangeLog.txt" />
+    <None Include="Resources\Changelog\ChangeLog.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Chemistry\" />
+    <Folder Include="Gameworks\Cards\DominoTiles\" />
+    <Folder Include="Gameworks\Cards\NeapolitanCards\" />
+    <Folder Include="Gameworks\Cards\UnoCards\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
